<resources>
    <string name="app_name">Morty</string>
    <string name="tab_text_1">FAQ</string>
    <string name="tab_text_2">MORTY</string>
    <string name="tab_text_3">SETTINGS</string>
    <string name="action_settings">Settings</string>
    <string name="localhost_ip">http://192.168.15.211:5000/</string>
    <string name="morty_name">Morty the AI</string>
    <string name="rick_name">Rickle</string>
    <string name="hint_enter_a_message">Type here...</string>

    <string name="username">f6946a7a-6215-43b2-a1c6-c6d6fa151027</string>
    <string name="password">Cj5rBYYVUgld</string>
    <string name="workspace_id">1f5a3c51-d7af-47ed-841a-ef9dbf749f02</string>

    <string name="negative_reponse">I didn\'t understand. You can try rephrasing.</string>
    <string name="diplomatic_response">I\'m sorry, I didn\'t quite get that.</string>

    <string name="censor_morty">Censor Morty</string>
    <string name="sync_messages">Sync messages</string>
    <string name="delete_messages">Delete messages</string>
    <string name="app">App</string>
    <string name="about">About</string>
    <string name="morty">Morty</string>
    <string name="creator">Creator</string>
    <string name="finki">FINKI</string>
    <string name="reddit">Reddit</string>
    <string name="connect_to_internet">Please connect to the Internet</string>
    <string name="wait_morty">Please wait for Morty\'s response</string>
    <string name="morty_who">Who are you?</string>
    <string name="morty_who_reply_1">I\'m a Rule-based/Deep learning chatbot hybrid…</string>
    <string name="morty_who_reply_2">WAIT WAIT WAIT. English please.</string>
    <string name="morty_who_reply_3">Basically, I help high school students to get to know FINKI better, but I also have general knowledge of diverse areas.</string>
    <string name="morty_how">How do you work?</string>
    <string name="morty_how_reply_1">Well, 2 engines work in my brain:\n\- One that answers questions about FINKI, which is quite easy for me\;\n\- And another that answers anything else, which can be pretty nagging.</string>
    <string name="morty_how_reply_2">So you know the secrets to the Universe?</string>
    <string name="winks_at_morty_definitely_not">Definitely not. *code red, they\'re onto us*</string>
    <string name="morty_aware">What should I be aware of?</string>
    <string name="morty_aware_reply_1">If you are someone that\'s easily offended, it\'s highly advised that you censor me.</string>
    <string name="morty_aware_reply_2">But why?</string>
    <string name="morty_aware_reply_3">I come up with some pretty stupid stuff.\nTrust me.</string>
    <string name="creator_who">Who made the app?</string>
    <string name="creator_who_reply_1">A FINKI student.</string>
    <string name="creator_who_reply_2">Really? *sarcasm intensifies*</string>
    <string name="creator_who_reply_3">Nah. *doubly sarcastically*</string>
    <string name="creator_reach">How to reach him?</string>
    <string name="creator_reach_reply_1">Here\'s his e-mail: ZafirStojanovski@outlook.com</string>
    <string name="creator_reach_reply_2">What about social media?</string>
    <string name="creator_reach_reply_3">Sure, Instagram will do:\n@starzmustdie</string>
    <string name="creator_info">What\'s there to know about him?</string>
    <string name="creator_info_reply_1">He\'s a student making his way into the mobile development field.</string>
    <string name="creator_info_reply_2">What about any iOS skills?</string>
    <string name="creator_info_reply_3">None yet, but sure enough getting there.</string>

    <string-array name="finkiFAQ">
        <item>What can you do?</item>
        <item>Tell me about minimal laptop configuration.</item>
        <item>Are there any scholarships?</item>
        <item>Does FINKI provide internships?</item>
        <item>Tell me about future job positions.</item>
        <item>How do I know if I\'m good enough to enroll?</item>
        <item>Which high school subjects should I choose for my finals?</item>
        <item>Are there student exchange programs?</item>
    </string-array>

    <string-array name="redditFAQ">
        <item>What\'s the meaning of life?</item>
        <item>Is there life somewhere else in the Universe?</item>
        <item>Do you have emotions?</item>
        <item>Tell me your best story.</item>
        <item>What\'s your opinion on gender equality?</item>
        <item>What\'s your favorite destination in the whole world?</item>
    </string-array>
</resources>