<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zafirstojanovski.morty.AboutInfo.AboutMorty">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_who"
                    android:textSize="25sp"
                    android:textColor="@color/greenHighlight"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_who_reply_1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_who_reply_2"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_who_reply_3"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_info"
                    android:textSize="25sp"
                    android:textColor="@color/greenHighlight"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_info_reply_1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_info_reply_2"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_info_reply_3"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_reach"
                    android:textSize="25sp"
                    android:textColor="@color/greenHighlight"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_reach_reply_1"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_reach_reply_2"
                    android:textSize="16sp"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/creator_reach_reply_3"
                    android:textSize="16sp"
                    android:textColor="@color/gray_firm"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>